# Ray_Tracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  geometric_object.cpp  geometric_object.hpp  main.cpp  main_old.cpp  objects.hpp  ray_tracer.out  test.cpp  test_main.cpp  windowtest
BMP/: bitmap_image.hpp
BRDF/: brdf.cpp  brdf.hpp
Camera/: #camera.cpp#  camera.cpp  camera.cpp~  camera.hpp  camera.hpp~
Colour/: colour.hpp
GeometricObject/: #geometricobject.cpp#  .#geometricobject.hpp  geometricobject.cpp  geometricobject.cpp~  geometricobject.hpp  geometricobject.hpp~
Includes/: includes.hpp  includes.hpp~
Lights/: lights.cpp  lights.hpp
Material/: material.cpp  material.hpp  material.hpp~
Maths/: #maths.cpp#  maths.cpp  maths.hpp
Mesh/: mesh.hpp
Sampler/: sampler.cpp  sampler.hpp
ShadeRec/: shaderec.hpp  shaderec.hpp~
Tracer/: *Messages*  tracer.cpp  tracer.hpp
ViewPlane/: viewplane.hpp  viewplane.hpp~
World/: world.cpp  world.hpp
geometric_object/: geometric_object.hpp
